default/objects/Carnet_Order_Items__c/Carnet_Order_Items__c.object-meta.xml
<CustomObject>
    <label>Carnet Order Items</label>
    <nameField>
        <label>Carnet Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carnet Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>