default/objects/Carnet_Order_Items__c/fields/Additional_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Additional_Hardware__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Additional Hardware</label>
    <referenceTo>Additional_Hardware__c</referenceTo>
    <relationshipLabel>Carnet Order Items</relationshipLabel>
    <relationshipName>Carnet_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>