default/objects/Carnet_Order_Items__c/fields/Carnet_Unit__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Carnet Unit</label>
    <referenceTo>Carnet_Unit__c</referenceTo>
    <relationshipLabel>Carnet Order Items</relationshipLabel>
    <relationshipName>Carnet_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>