default/objects/Carnet_Order_Items__c/fields/Contract_length__c.field-meta.xml
<CustomField>
    <fullName>Contract_length__c</fullName>
    <label>Contract length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>