default/objects/Carnet_Order_Items__c/fields/isEU__c.field-meta.xml
<CustomField>
    <fullName>isEU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEU</label>
    <type>Checkbox</type>
</CustomField>