default/objects/Carnet_Order_Items__c/fields/IsGoods__c.field-meta.xml
<CustomField>
    <fullName>IsGoods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGoods</label>
    <type>Checkbox</type>
</CustomField>