default/objects/Carnet_Order_Items__c/fields/isTariff__c.field-meta.xml
<CustomField>
    <fullName>isTariff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTariff</label>
    <type>Checkbox</type>
</CustomField>