default/objects/Carnet_Order_Items__c/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly?</label>
    <type>Checkbox</type>
</CustomField>