default/objects/Carnet_Order_Items__c/fields/PLName__c.field-meta.xml
<CustomField>
    <fullName>PLName__c</fullName>
    <label>PLName</label>
    <length>70</length>
    <type>Text</type>
</CustomField>