default/objects/Carnet_Order_Items__c/fields/Sales_Basic_Monthly_Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Basic_Monthly_Fee_Discount__c</fullName>
    <label>Sales Basic Monthly Fee - Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>