default/objects/Carnet_Order_Items__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Standard</label>
    <type>Checkbox</type>
</CustomField>