default/objects/Carnet_Order_Items__c/fields/testprice__c.field-meta.xml
<CustomField>
    <fullName>testprice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ASD</description>
    <label>testprice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>