default/objects/Carnet_Order_Items__c/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <label>Total Discount Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>