default/objects/Carnet_Order_Items__c/fields/Total_Discount_Amount_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount_VAT__c</fullName>
    <label>Total Discount Amount VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>